Adjusts category titles and padding between color samples

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -107,6 +107,11 @@
    * Visual style sheet colors
    */
 
+  .color-category {
+    font-weight: bold;
+    padding-bottom: 5px;
+  }
+
   .color {
 
     border: 1px $color-gainsboro solid;
